chore: update swagger, add validation tests and implement log rotation
